<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_video_coordinatorlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#112539"
    tools:context="org.apache.cordova.twiliovideo.TwilioVideoActivity">

    <include layout="@layout/content_video" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:orientation="vertical" >



        <!-- BOTTOM 4 BUTTONS-->
        <LinearLayout
            android:id="@+id/bottom_buttons_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:orientation="horizontal" >

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/local_video_action_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:contentDescription="@string/toggle_camera"
                android:src="@drawable/ic_videocam_green_24px"
                app:backgroundTint="@color/colorButtonUnselected"
                app:fabSize="auto" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/local_audio_action_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:contentDescription="@string/toggle_audio"
                android:src="@drawable/ic_mic_green_24px"
                app:backgroundTint="@color/colorButtonUnselected"
                app:fabSize="auto" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/switch_audio_action_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:contentDescription="@string/switch_audio"
                android:src="@drawable/ic_phonelink_ring_white_24dp"
                app:backgroundTint="@color/colorButtonUnselected"
                app:fabSize="auto" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/connect_action_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:contentDescription="@string/disconnect"
                android:src="@drawable/ic_call_white_24px"
                app:backgroundTint="@color/colorButtonDisconnect"
                app:fabSize="auto" />

        </LinearLayout>


        <!--BOTTOM MIC ICON AND REMOTE NAME - ONLY SHOWN DURING A CALL -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="8dp"
            android:gravity="left"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textViewInCallRemoteName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text=""
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/imageViewInCallRemoteMicMuteState"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/ic_mic_green_24px" />


        </LinearLayout>

    </LinearLayout>

    <!-- SHOW OFFLINE VIEW SHOULD COVER WHOLE SCREEN -->
    <LinearLayout
        android:id="@+id/viewAlert"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="#112539"
        android:visibility="gone"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageAlertInCircle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            app:srcCompat="@mipmap/ic_alert_in_circle" />

        <TextView
            android:id="@+id/textViewAlertTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/something_went_wrong"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewAlertSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/we_re_trying_to_reconnect_you"
            android:textAlignment="center"
            android:textSize="18sp" />


        <Button
            android:id="@+id/button_view_alert_close"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="200dp"
            android:background="@mipmap/close_x_red_circle"
            android:gravity="bottom|center" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
